// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Modal AutoOpen play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1vv50_1"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1vv50_22">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1vv50_45"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_containerForMainMenu_18mb7_51">
      <div class="_topContainer_18mb7_2">
        <a class="_logoContainer_1tdet_1 _logoAsLink_1tdet_7"
           href="https://www.skatteetaten.no/"
        >
          <img class="_logo_mobile_1tdet_16"
               alt="Forside Skatteetaten"
               src="[REMOVED]"
          >
          <img class="_logo_desktop_1tdet_19"
               alt="Forside Skatteetaten"
               src="[REMOVED]"
          >
        </a>
        <div class="_contentContainer_18mb7_17">
          <div class="_content_18mb7_17">
            <div class="_container_azp4i_5">
              <div class>
              </div>
              <button class="_button_197zg_1  _menuButton_azp4i_17"
                      lang="nb"
                      aria-expanded="false"
                      type="button"
              >
                <span class="_iconWrapper_azp4i_20">
                  <span class="_flagIcon_azp4i_25">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         aria-hidden="true"
                         viewbox="0 0 1100 800"
                         class="_flagIconSvg_azp4i_30"
                    >
                      <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                            style="fill: rgb(255, 255, 255);"
                      >
                      </path>
                      <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                            style="fill: rgb(239, 43, 45);"
                      >
                      </path>
                      <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                            style="fill: rgb(0, 40, 104);"
                      >
                      </path>
                    </svg>
                  </span>
                  <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _arrowMobile_azp4i_33"
                       viewbox="0 0 24 24"
                       focusable="false"
                       aria-hidden="true"
                       role="img"
                  >
                    <path d="m7 10 5 5 5-5H7Z">
                    </path>
                  </svg>
                </span>
                Bokmål
                <span class="_srOnly_azp4i_133">
                  &nbsp;Meny
                </span>
                <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _arrowDesktop_azp4i_41"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-hidden="true"
                     role="img"
                >
                  <path d="m7 10 5 5 5-5H7Z">
                  </path>
                </svg>
              </button>
              <div class="_menuArrow_azp4i_67">
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="_separator_18mb7_28">
        <div class="_separatorRight_18mb7_41">
        </div>
        <div class="_separatorLeft_18mb7_33">
        </div>
      </div>
    </div>
  </header>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Denne testen skal sjekke om fokus blir satt på skiplink a-elementet når modalen lukkes. 
        Testes ved å reloade siden. Det er ved programatisk åpning av modalen at fokus tidligere ikke har blitt satt korrekt.
  </p>
  <dialog class="_modal_125nh_5 _modalNoBorder_125nh_39"
          aria-labelledby="modalHeadingId-:r18:"
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r19:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r19:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r18:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal ref.current.showModal
    </span>
  </button>
</div>
`;

exports[`Tester/Modal AutoOpenAndCloseOnEscape play-test 1`] = `
<div data-test-block="true">
  <header class>
    <a href="main"
       class="_skipLink_1vv50_1"
       data-skip-link="ds-skip-link"
    >
      <span class="_skipLinkContent_1vv50_22">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1vv50_45"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M4 14.64L12 21.5L20 14.64L18.33 12.7L13.25 17.05L13.25 3.5H10.75L10.75 17.05L5.67 12.7L4 14.64Z">
          </path>
        </svg>
        Hopp til hovedinnhold
      </span>
    </a>
    <div class="_containerForMainMenu_18mb7_51">
      <div class="_topContainer_18mb7_2">
        <a class="_logoContainer_1tdet_1 _logoAsLink_1tdet_7"
           href="https://www.skatteetaten.no/"
        >
          <img class="_logo_mobile_1tdet_16"
               alt="Forside Skatteetaten"
               src="[REMOVED]"
          >
          <img class="_logo_desktop_1tdet_19"
               alt="Forside Skatteetaten"
               src="[REMOVED]"
          >
        </a>
        <div class="_contentContainer_18mb7_17">
          <div class="_content_18mb7_17">
            <div class="_container_azp4i_5">
              <div class>
              </div>
              <button class="_button_197zg_1  _menuButton_azp4i_17"
                      lang="nb"
                      aria-expanded="false"
                      type="button"
              >
                <span class="_iconWrapper_azp4i_20">
                  <span class="_flagIcon_azp4i_25">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         aria-hidden="true"
                         viewbox="0 0 1100 800"
                         class="_flagIconSvg_azp4i_30"
                    >
                      <path d="M500 0h-50v350h650v-50H500zM450 450v350h50V500h600v-50zM350 450H0v50h300v300h50zM350 350V0h-50v300H0v50z"
                            style="fill: rgb(255, 255, 255);"
                      >
                      </path>
                      <path d="M0 0h300v300H0zM500 0h600v300H500zM0 500h300v300H0zM500 500h600v300H500z"
                            style="fill: rgb(239, 43, 45);"
                      >
                      </path>
                      <path d="M450 350V0H350v350H0v100h350v350h100V450h650V350z"
                            style="fill: rgb(0, 40, 104);"
                      >
                      </path>
                    </svg>
                  </span>
                  <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _arrowMobile_azp4i_33"
                       viewbox="0 0 24 24"
                       focusable="false"
                       aria-hidden="true"
                       role="img"
                  >
                    <path d="m7 10 5 5 5-5H7Z">
                    </path>
                  </svg>
                </span>
                Bokmål
                <span class="_srOnly_azp4i_133">
                  &nbsp;Meny
                </span>
                <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _arrowDesktop_azp4i_41"
                     viewbox="0 0 24 24"
                     focusable="false"
                     aria-hidden="true"
                     role="img"
                >
                  <path d="m7 10 5 5 5-5H7Z">
                  </path>
                </svg>
              </button>
              <div class="_menuArrow_azp4i_67">
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="_separator_18mb7_28">
        <div class="_separatorRight_18mb7_41">
        </div>
        <div class="_separatorLeft_18mb7_33">
        </div>
      </div>
    </div>
  </header>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Denne testen skal sjekke om fokus blir satt på skiplink a-elementet når modalen lukkes etter at bruker har trykket på Escape-knappen. 
        Modalen åpnes ved å laste siden på nytt.
  </p>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r1d:"
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1e:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1e:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r1d:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Modalinnhold
        </p>
      </div>
    </div>
  </dialog>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne med klikk
    </span>
  </button>
</div>
`;

exports[`Tester/Modal ClickCloseButton play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rk:"
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rl:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rl:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rk:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal Defaults play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r2:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r2:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal VariantImportant play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5 _modalNoBorder_125nh_39"
          aria-labelledby="modalHeadingId-:r6:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <img class="_logo_1juh7_1 _modalLogo_125nh_26"
             alt="Skatteetaten logo"
             src="[REMOVED]"
        >
        <h1 id="modalHeadingId-:r6:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
      <div class="_separator_11id6_1">
        <div class="_separatorLeft_11id6_5">
        </div>
        <div class="_separatorRight_11id6_13">
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal VariantPlain play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5 _modalNoBorder_125nh_39"
          aria-labelledby="modalHeadingId-:r4:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r5:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r5:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r4:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAttributes play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog id="htmlId"
          class="_modal_125nh_5  dummyClassname"
          lang="nb"
          data-testid="123ID"
          aria-labelledby="modalHeadingId-:r0:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r0:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAutoClose play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rm:"
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rn:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rn:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rm:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithAutoCloseDisabled play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:ro:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rp:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rp:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:ro:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithHideTitle play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rq:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rr:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rr:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rq:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29  _srOnly_125nh_71"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithIcon play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:ra:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rb:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rb:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <div>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 2 1 21h22L12 2Zm0 4 7.53 13H4.47L12 6Zm-1 4v4h2v-4h-2Zm0 6v2h2v-2">
            </path>
          </svg>
        </div>
        <h1 id="modalHeadingId-:ra:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithImage play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r8:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r9:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r9:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <img alt="Image alt tekst"
           class="_modalIllustration_125nh_35"
           src="[REMOVED]"
      >
      <div class="_modalPaddingL_125nh_51 _modalNoPaddingTop_125nh_57">
        <h1 id="modalHeadingId-:r8:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithPadding play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rg:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rh:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rh:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingNONE_125nh_42">
        <h1 id="modalHeadingId-:rg:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithShadowDom play-test 1`] = `
<div data-test-block="true">
  <modal-customelement>
  </modal-customelement>
</div>
`;

exports[`Tester/Modal WithStateChangeAndFocus play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:ru:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rv:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rv:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:ru:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithStateChangeAndTextFieldFocus play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:r10:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r11:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r11:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:r10:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <div class>
          <label id="labelId-:r14:"
                 class="_label_348na_5"
                 for="textFieldTextboxId-:r13:"
          >
            Navn
          </label>
          <input id="textFieldTextboxId-:r13:"
                 class="_textbox_1b2vd_5"
                 autocomplete="off"
          >
          <div id="textFieldErrorId-:r12:"
               aria-live="assertive"
               aria-atomic="true"
          >
          </div>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithTransparentBackground play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rd:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:re:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:re:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rd:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithVerticalScrolling play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:ri:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <button class="_button_1hc5e_1 _button_medium_1hc5e_50  _closeButton_125nh_61"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1hc5e_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rj:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rj:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:ri:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/Modal WithoutCloseButton play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Åpne modal
    </span>
  </button>
  <dialog class="_modal_125nh_5"
          aria-labelledby="modalHeadingId-:rf:"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_125nh_23"
    >
      <div class="_modalPaddingL_125nh_51">
        <h1 id="modalHeadingId-:rf:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_125nh_29"
        >
          Vil du erstatte nye opplysninger fra fil?
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
          Du har valgt å laste opp nye opplysninger fra fil. Vil du at disse skal gjelde fra nå av?
        </p>
        <div class="flex">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   marginRightM"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Erstatt opplysninger
            </span>
          </button>
          <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1"
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Avbryt
            </span>
          </button>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;
